# wasm-demo

./: Cargo.toml  Makefile.toml  README.md
src/: api.rs  lib.rs  types.rs
src/components/: mod.rs  navbar.rs  product_card.rs
src/pages/: home.rs
static/: index.html
